implemented GET /api/auth/reset-password
implemented GET /api/auth/reset-password along with some minor changes and adjustments also removed the used filed from the PasswordResetToken since deleting the token after use will be simpler no dead tokens in the database
